Remove --add-modules org.jline option from the launchers