@@ -187,8 +187,6 @@ class Runner(
         manifestOptions ++ environmentOptions ++ commandLineOptions
       if (shouldInvokeViaModulePath) {
         jvmArguments = jvmArguments :++ Seq(
-          "--add-modules",
-          "org.jline",
           "--module-path",
           engine.componentDirPath.toAbsolutePath.normalize.toString,
           "-m",
